--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                       
                           <p>
 
-                    <a href="#" class="button" style="margin-top: 10px;">Know More</a>
+                    <a href="buynow.html" class="button" style="margin-top: 10px;">Know More</a>
 
                 </div>
 
