--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                         
                        </p>
 
-                    <a href="#" class="button">Buy Now</a>
+                    <a href="buynow.html" class="button">Buy Now</a>
                 </div>
 
 
