--- a/index.html
+++ b/index.html
@@ -305,9 +305,9 @@
             </div>
         </div>
         <span class="footer__copy">
-            &#169; <a target="_blank" href="" class="footer__dev-link">Chaudhry Rashid</a> All rigths
-            reserved
-            <p id="date"></p>
+            &#169; <a target="_blank" href="https://chrohail.org/" class="footer__dev-link">Chaudhry Rashid</a> All rigths 
+            reserved 
+            <p id="date">2024</p>
         </span>
     </footer>
 
