--- a/buynow.html
+++ b/buynow.html
@@ -57,7 +57,7 @@
 
         <div class="footer__container container grid">
             <div class="footer__content">
-                <a href="#" class="footer__logo">
+                <a href="index.html" class="footer__logo">
                     <i class="ri-steering-line"></i>
                     Mk-autoslae
 
